[gd_scene load_steps=14 format=3 uid="uid://do755yejs3y7l"]

[ext_resource type="Script" path="res://addons/godot-idea-board/canvas_menu.gd" id="1_ug2mc"]

[sub_resource type="InputEventKey" id="InputEventKey_suu4o"]
alt_pressed = true
keycode = 83

[sub_resource type="Shortcut" id="Shortcut_tpbq0"]
events = [SubResource("InputEventKey_suu4o")]

[sub_resource type="InputEventKey" id="InputEventKey_0qylt"]
alt_pressed = true
keycode = 71

[sub_resource type="Shortcut" id="Shortcut_vact5"]
events = [SubResource("InputEventKey_0qylt")]

[sub_resource type="InputEventKey" id="InputEventKey_f50a7"]
alt_pressed = true
keycode = 82

[sub_resource type="Shortcut" id="Shortcut_s5cmg"]
events = [SubResource("InputEventKey_f50a7")]

[sub_resource type="InputEventKey" id="InputEventKey_ijkyd"]
alt_pressed = true
keycode = 84

[sub_resource type="Shortcut" id="Shortcut_ms2rg"]
events = [SubResource("InputEventKey_ijkyd")]

[sub_resource type="InputEventKey" id="InputEventKey_yf1im"]
alt_pressed = true
keycode = 67

[sub_resource type="Shortcut" id="Shortcut_s74jh"]
events = [SubResource("InputEventKey_yf1im")]

[sub_resource type="InputEventKey" id="InputEventKey_yl0k0"]
alt_pressed = true
keycode = 76

[sub_resource type="Shortcut" id="Shortcut_f84nk"]
events = [SubResource("InputEventKey_yl0k0")]

[node name="CanvasMenu" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_ug2mc")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="LeftContainer" type="HBoxContainer" parent="HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="SaveButton" type="Button" parent="HBoxContainer/PanelContainer/LeftContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_constants/h_separation = 0
shortcut = SubResource("Shortcut_tpbq0")
text = "Save"

[node name="GroupButton" type="Button" parent="HBoxContainer/PanelContainer/LeftContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_constants/h_separation = 0
shortcut = SubResource("Shortcut_vact5")
text = "Group"

[node name="LabelButton" type="Button" parent="HBoxContainer/PanelContainer/LeftContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_constants/h_separation = 0
shortcut = SubResource("Shortcut_s5cmg")
text = "Label"

[node name="TextDocumentButton" type="Button" parent="HBoxContainer/PanelContainer/LeftContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_constants/h_separation = 0
shortcut = SubResource("Shortcut_ms2rg")
text = "TxtDoc"

[node name="ConnectButton" type="Button" parent="HBoxContainer/PanelContainer/LeftContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
shortcut = SubResource("Shortcut_s74jh")
text = "Connect"

[node name="LockButton" type="Button" parent="HBoxContainer/PanelContainer/LeftContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
shortcut = SubResource("Shortcut_f84nk")
text = "Lock"

[node name="UnlockButton" type="Button" parent="HBoxContainer/PanelContainer/LeftContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Unlock"

[node name="BgColorIcon" type="Button" parent="HBoxContainer/PanelContainer/LeftContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
flat = true

[node name="BgColorLabel" type="Label" parent="HBoxContainer/PanelContainer/LeftContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Bg:"

[node name="BgColorPickerButton" type="ColorPickerButton" parent="HBoxContainer/PanelContainer/LeftContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
color = Color(0.14902, 0.160784, 0.176471, 1)

[node name="GridColorIcon" type="Button" parent="HBoxContainer/PanelContainer/LeftContainer"]
unique_name_in_owner = true
layout_mode = 2
flat = true

[node name="GridColorLabel" type="Label" parent="HBoxContainer/PanelContainer/LeftContainer"]
unique_name_in_owner = true
layout_mode = 2
text = ":"

[node name="GridColorPickerButton" type="ColorPickerButton" parent="HBoxContainer/PanelContainer/LeftContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
color = Color(1, 1, 1, 1)

[node name="BgImagePathLineEdit" type="LineEdit" parent="HBoxContainer/PanelContainer/LeftContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
placeholder_text = "or Bg Image Path"

[node name="GridContainer2" type="VBoxContainer" parent="HBoxContainer/PanelContainer/LeftContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/PanelContainer/LeftContainer/GridContainer2"]
layout_mode = 2

[node name="SoundLabel" type="Label" parent="HBoxContainer/PanelContainer/LeftContainer/GridContainer2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "SndVol:"

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/PanelContainer/LeftContainer/GridContainer2/HBoxContainer2"]
layout_mode = 2

[node name="SoundHSlider" type="HSlider" parent="HBoxContainer/PanelContainer/LeftContainer/GridContainer2/HBoxContainer2/CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
max_value = 1.0
step = 0.01
value = 0.2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/PanelContainer/LeftContainer/GridContainer2"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="SoundPlayButton" type="Button" parent="HBoxContainer/PanelContainer/LeftContainer/GridContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2

[node name="SoundStopButton" type="Button" parent="HBoxContainer/PanelContainer/LeftContainer/GridContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2

[node name="SoundLoopButton" type="Button" parent="HBoxContainer/PanelContainer/LeftContainer/GridContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
toggle_mode = true
button_pressed = true

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/PanelContainer/LeftContainer"]
layout_mode = 2
columns = 3

[node name="LeftAlignButton" type="Button" parent="HBoxContainer/PanelContainer/LeftContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2

[node name="RightAlignButton" type="Button" parent="HBoxContainer/PanelContainer/LeftContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2

[node name="HAlignButton" type="Button" parent="HBoxContainer/PanelContainer/LeftContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2

[node name="TopAlignButton" type="Button" parent="HBoxContainer/PanelContainer/LeftContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2

[node name="BottomAlignButton" type="Button" parent="HBoxContainer/PanelContainer/LeftContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2

[node name="VAlignButton" type="Button" parent="HBoxContainer/PanelContainer/LeftContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
